<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.v7.widget.Toolbar
                android:id="@+id/new_event_toolbar"
                app:title="@string/new_event_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        </android.support.v7.widget.Toolbar>
        <EditText
                android:id="@+id/new_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_event_name"/>
        <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner">
        </DatePicker>
        <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:timePickerMode="spinner">
        </TimePicker>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:hint="@string/hint_event_destination"/>
    </LinearLayout>
</layout>