<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="group" type="edu.kit.pse.gruppe1.goApp.client.model.Group"></variable>
    </data>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView android:id="@+id/member_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:elevation="2dp"
                  android:paddingBottom="5dp"
                  android:paddingTop="5dp"
                  android:textSize="26sp"
                  android:textColor="#000000"
                  android:background="@color/colorPrimary"
                  android:text="@string/group_member"/>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/member_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_below="@id/member_text"
                android:layout_height="190dp"/>
        <TextView android:id="@+id/request_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/member_recycler_view"
                  android:elevation="2dp"
                  android:paddingBottom="5dp"
                  android:paddingTop="5dp"
                  android:textSize="26sp"
                  android:textColor="#000000"
                  android:background="@color/colorPrimary"
                  android:text="@string/group_request"/>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/request_recycler_view"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_below="@id/request_text"
                android:layout_height="190dp"/>
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/delete_group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request_recycler_view"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                android:textSize="26sp"
        android:text="@string/delete"/>
    </RelativeLayout>
</layout>